
2018-04-10  Luke Smith <cobcoder@users.sourceforge.net>

	* screenio.c:
	   - replace Alt-Home and Alt-End with toggle functions
	   - fix Insert key at column 1
	   - fix other alt keys

2018-04-10  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* reportio.c [_WIN32]: fix redefinition of lseek

2018-04-03  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* screenio.c (cob_screen_init): fix definition of alt keys
	  when function keys have negative values

2018-04-01  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* screenio.c (cob_screen_init): escape backslash in key definitions

2018-03-31  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (set_cob_time_from_local_time): new function called on
	  all systems, including code for computing UTC offset (with correct
	  sign)
	* common.c (cob_get_current_date_and_time) [_WIN32]: no longer need
	  to force of date re-calculation as we always use localtime now

2018-03-29  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* termio.c (cob_display): added missing handling of cob_unix_lf
	* common.c (set_cob_time_offset): recreated for use on all systems,
	  moved code for computation of UTC there, including adjustment by
	  daylight saving time (which was missing from _WIN32 until now),
	  set unknown offset in the unlikely case that computation of
	  UTC offset does not work

2018-03-21  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* screenio.c (cob_convert_key): define ALT_DEL, ALT_HOME, ALT_END,
	  ALT_LEFT, ALT_RIGHT if they aren't defined already and map the
	  keys that were previously converted to use these defines,
	  also fixes accepting these keys in all curses implementations
	  that define these keys directly
	* screenio.c (cob_screen_init): fix for bug #503 - based on work of
	  Luke Smith
	  add the PDCurses ALT key constants where not available instead of
	  using the version-dependent numeric values, if possible using